vault/vault-prod/gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: nginx-vault
spec:
  controllerName: gateway.nginx.org/nginx-gateway-controller
