vault/vault-prod/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: vault-gateway
  namespace: vault
spec:
  gatewayClassName: nginx
  listeners:
    - name: vault-https
      protocol: HTTPS
      port: 8200
      hostname: "vault.local"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: vault-ui-tls
      allowedRoutes:
        namespaces:
          from: Same
