vault/vault-prod/httprout.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vault-ui-route
  namespace: vault
spec:
  parentRefs:
    - name: vault-gateway
  hostnames:
    - "vault.local"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: vault-ui
          port: 8200
